--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ scaling-exercise
 simple-web-service
 spring-example-project
 ChoreTracker
+ml-kurkkumopo-backend
+ml-kurkkumopo-frontend
+ml-kurkkumopo-training
